angularJs main module

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,11 +48,11 @@
         <script src="js/tickets/list/list.controller.js" type="application/javascript"></script>
         <script src="js/tickets/overview/overview.controller.js" type="application/javascript"></script>
 
-
         <script src="js/help-desk.module.js" type="application/javascript"></script>
         <script src="js/help-desk.constants.js" type="application/javascript"></script>
         <script src="js/help-desk.route.js" type="application/javascript"></script>
 
-    <div ng-view class="container"></div>
+    <div ng-view></div>
     </body>
 </html>
+
