--- a/src/main/webapp/js/tickets/feedback/feedback.html
+++ b/src/main/webapp/js/tickets/feedback/feedback.html
@@ -1,26 +1,39 @@
-<a class="btn btn-success" ng-href="">Back</a>
-<div class="title">Ticket ({{vm.ticket.nID}}) - {{vm.ticket.name}}</div>
-<form>
-    <p>
-        Please, rate your satisfaction with the solution:
-    </p>
-    <div class="row">
-        <div>
-            1
-        </div>
-        <div>
-            2
-        </div>
-        <div>
-            3
-        </div>
-        <div>
-            4
-        </div>
-        <div>
-            5
-        </div>
+<div class="container rating">
+    <br />
+    <div class="col-xs-2">
+        <button style="width: 120px;" class="btn btn-success">Back</button>
     </div>
-    <textarea></textarea>
-    <button>Submit</button>
-</form>
+    <div class="col-xs-8">
+        <h3 style="margin: 0; line-height: 34px;">Ticket (2) - Task 2</h3>
+        <br />
+        <br />
+        <h3>Feedback</h3>
+        <div class="row">
+            <div class="star">
+                <span class="star-icon">★</span>
+                <label class="star-label">1</label>
+            </div>
+            <div class="star">
+                <span class="star-icon">★</span>
+                <label class="star-label">2</label>
+            </div>
+            <div class="star">
+                <span class="star-icon">★</span>
+                <label class="star-label">3</label>
+            </div>
+            <div class="star">
+                <span class="star-icon" style="color: yellow;">★</span>
+                <label class="star-label">4</label>
+            </div>
+            <div class="star">
+                <span class="star-icon">★</span>
+                <label class="star-label">5</label>
+            </div>
+        </div>
+        <br />
+        <br />
+        <textarea rows="7" cols="60" class="form-controls">There is some feedback about an Admin work with a ticket</textarea>
+        <br />
+        <br />
+    </div>
+</div>
