--- a/src/main/webapp/js/tickets/list/list.html
+++ b/src/main/webapp/js/tickets/list/list.html
@@ -1,40 +1,100 @@
-<div class="row">
-    <a class="btn btn-success" ng-href="/editor">Create New Ticket</a>
+<div class="container all-tickets-page">
+    <br />
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-xs-12">
+            <a style="width: 300px;" class="btn btn-lg pull-right btn-success" ng-href="/editor">Create New Ticket</a>
+        </div>
+    </div>
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-xs-6">
+            <button style="width: 100%;" class="btn btn-lg pull-right btn-primary" ng-class=>All Tickets</button>
+        </div>
+        <div class="col-xs-6">
+            <button style="width: 100%;" class="btn btn-lg pull-right btn-default">My Tickets</button>
+        </div>
+    </div>
+    <!--<div class="row">-->
+        <!--<div class="col-xs-6">-->
+            <!--<button style="width: 100%;" class="btn btn-lg pull-right btn-default">All Tickets</button>-->
+        <!--</div>-->
+        <!--<div class="col-xs-6">-->
+            <!--<button style="width: 100%;" class="btn btn-lg pull-right btn-primary">My Tickets</button>-->
+        <!--</div>-->
+    <!--</div>-->
+    <br />
+    <br />
+    <input type="text" title="filter" class="form-control search-input" />
+    <br />
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>ID
+                <div class="glyphicon glyphicon-play up"></div>
+                <div class="glyphicon glyphicon-play down"></div>
+            </th>
+            <th>Name
+                <div class="glyphicon glyphicon-play up"></div>
+                <div class="glyphicon glyphicon-play down"></div>
+            </th>
+            <th>Desired Date
+                <div class="glyphicon glyphicon-play up"></div>
+                <div class="glyphicon glyphicon-play down"></div>
+            </th>
+            <th>Urgency
+                <div class="glyphicon glyphicon-play up"></div>
+                <div class="glyphicon glyphicon-play down"></div>
+            </th>
+            <th>Status
+                <div class="glyphicon glyphicon-play up"></div>
+                <div class="glyphicon glyphicon-play down"></div>
+            </th>
+            <th>Action
+                <div class="glyphicon glyphicon-play up"></div>
+                <div class="glyphicon glyphicon-play down"></div>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td><u class="link">Task 1</u></td>
+            <td>11/11/2017</td>
+            <td>High</td>
+            <td>Draft</td>
+            <th>
+                <div class="btn btn-success" style="width: 90%;">Submit
+                    <div class="glyphicon glyphicon-play"></div>
+                </div>
+            </th>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td><u class="link">Task 2</u></td>
+            <td>14/11/2017</td>
+            <td>High</td>
+            <td>In Progress</td>
+            <th>
+                <div class="btn btn-success" style="width: 90%;">Approve
+                    <div class="glyphicon glyphicon-play"></div>
+                </div>
+            </th>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td><u class="link">Task 3</u></td>
+            <td>15/11/2017</td>
+            <td>Low</td>
+            <td>Draft</td>
+            <th>
+                <div class="btn btn-success" style="width: 90%;">Submit
+                    <div class="glyphicon glyphicon-play"></div>
+                </div>
+            </th>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<div>
-    <button ng-click="vm.showAllTickets">All Tickets</button>
-    <button ng-click="vm.showMyTickets">My Tickets</button>
-</div>
-<div>
-    <input class="form-control" type="text" ng-model="vm.filterText" ng-change="vm.onFilterChange()"/>
-</div>
-<table class="table">
-    <thead>
-    <tr>
-        <td>ID</td>
-        <td>Name</td>
-        <td>Desired Date</td>
-        <td>Urgency</td>
-        <td>Status</td>
-        <td>Action</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <!--<td>ID</td>-->
-        <!--<td>Name</td>-->
-        <!--<td>Desired Date</td>-->
-        <!--<td>Urgency</td>-->
-        <!--<td>Status</td>-->
-        <!--<td>Action</td>-->
-    </tr>
-    </tbody>
-    <tfoot>
-    <tr>
-        <td colspan="2"><input type="text" value="{{vm.itemsPerPage}}"></td>
-        <td colspan="4">
-            <!--pagination-->
-        </td>
-    </tr>
-    </tfoot>
-</table>
