--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,7 @@
         <script src="./webjars/angular-bootstrap/2.5.0/ui-bootstrap-tpls.min.js" type="application/javascript"></script>
         <script src="./webjars/angular-smart-table/2.1.8/dist/smart-table.min.js" type="application/javascript"></script>
         <script src="./webjars/angular-moment/1.0.1/angular-moment.min.js" type="application/javascript"></script>
+        <script src="./webjars/angular-ui-uploader/1.1.1/dist/uploader.min.js" type="application/javascript"></script>
 
 
         <script src="js/auth/auth.module.js" type="application/javascript"></script>
