--- a/src/main/webapp/js/tickets/list/list.html
+++ b/src/main/webapp/js/tickets/list/list.html
@@ -3,7 +3,7 @@
     <br />
     <br />
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12" ng-if="vm.oCurrentuser.sRole === 'EMPLOYEE' || vm.oCurrentuser.sRole === 'MANAGER'">
             <a style="width: 300px;" class="btn btn-lg pull-right btn-success" ng-href="/editor">Create New Ticket</a>
         </div>
     </div>
@@ -11,20 +11,17 @@
     <br />
     <div class="row">
         <div class="col-xs-6">
-            <button style="width: 100%;" class="btn btn-lg pull-right btn-primary" ng-class=>All Tickets</button>
+            <button style="width: 100%;"
+                    class="btn btn-lg pull-right"
+                    ng-class="vm.oState.bAll ? 'btn-primary' : 'btn-default'"
+                    ng-click="vm.showAllTickets()">All Tickets</button>
         </div>
         <div class="col-xs-6">
-            <button style="width: 100%;" class="btn btn-lg pull-right btn-default">My Tickets</button>
+            <button style="width: 100%;" class="btn btn-lg pull-right"
+                    ng-class="vm.oState.bMine ? 'btn-primary' : 'btn-default'"
+                    ng-click="vm.showMyTickets()">My Tickets</button>
         </div>
     </div>
-    <!--<div class="row">-->
-        <!--<div class="col-xs-6">-->
-            <!--<button style="width: 100%;" class="btn btn-lg pull-right btn-default">All Tickets</button>-->
-        <!--</div>-->
-        <!--<div class="col-xs-6">-->
-            <!--<button style="width: 100%;" class="btn btn-lg pull-right btn-primary">My Tickets</button>-->
-        <!--</div>-->
-    <!--</div>-->
     <br />
     <br />
     <input type="text" title="filter" class="form-control search-input" />
@@ -59,36 +56,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td><u class="link">Task 1</u></td>
-            <td>11/11/2017</td>
-            <td>High</td>
-            <td>Draft</td>
-            <th>
-                <div class="btn btn-success" style="width: 90%;">Submit
-                    <div class="glyphicon glyphicon-play"></div>
-                </div>
-            </th>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td><u class="link">Task 2</u></td>
-            <td>14/11/2017</td>
-            <td>High</td>
-            <td>In Progress</td>
-            <th>
-                <div class="btn btn-success" style="width: 90%;">Approve
-                    <div class="glyphicon glyphicon-play"></div>
-                </div>
-            </th>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td><u class="link">Task 3</u></td>
-            <td>15/11/2017</td>
-            <td>Low</td>
-            <td>Draft</td>
+        <tr ng-repeat="oTicket in vm.aTickets">
+            <th scope="row">{{oTicket.nId}}</th>
+            <td><u class="link" ng-click="vm.openTicketOverview(oTicket)">{{oTicket.sName}}</u></td>
+            <td>{{oTicket.dDesiredDate}}</td>
+            <td>{{oTicket.sUrgency}}</td>
+            <td>{{oTicket.sState}}</td>
             <th>
                 <div class="btn btn-success" style="width: 90%;">Submit
                     <div class="glyphicon glyphicon-play"></div>
@@ -96,5 +69,43 @@
             </th>
         </tr>
         </tbody>
+        <!--<tbody>-->
+        <!--<tr>-->
+            <!--<th scope="row">1</th>-->
+            <!--<td><u class="link">Task 1</u></td>-->
+            <!--<td>11/11/2017</td>-->
+            <!--<td>High</td>-->
+            <!--<td>Draft</td>-->
+            <!--<th>-->
+                <!--<div class="btn btn-success" style="width: 90%;">Submit-->
+                    <!--<div class="glyphicon glyphicon-play"></div>-->
+                <!--</div>-->
+            <!--</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th scope="row">2</th>-->
+            <!--<td><u class="link">Task 2</u></td>-->
+            <!--<td>14/11/2017</td>-->
+            <!--<td>High</td>-->
+            <!--<td>In Progress</td>-->
+            <!--<th>-->
+                <!--<div class="btn btn-success" style="width: 90%;">Approve-->
+                    <!--<div class="glyphicon glyphicon-play"></div>-->
+                <!--</div>-->
+            <!--</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th scope="row">3</th>-->
+            <!--<td><u class="link">Task 3</u></td>-->
+            <!--<td>15/11/2017</td>-->
+            <!--<td>Low</td>-->
+            <!--<td>Draft</td>-->
+            <!--<th>-->
+                <!--<div class="btn btn-success" style="width: 90%;">Submit-->
+                    <!--<div class="glyphicon glyphicon-play"></div>-->
+                <!--</div>-->
+            <!--</th>-->
+        <!--</tr>-->
+        <!--</tbody>-->
     </table>
 </div>
