--- a/src/main/webapp/js/tickets/overview/overview.html
+++ b/src/main/webapp/js/tickets/overview/overview.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-xs-1"></div>
         <div class="col-xs-8">
-            <h3 style="line-height: 34px; margin: 0;">Ticket ({{vm.oTicket.nId}}) - {{vm.oTicket.nName}}</h3>
+            <h3 style="line-height: 34px; margin: 0;">Ticket ({{vm.oTicket.nId}}) - {{vm.oTicket.sName}}</h3>
         </div>
         <div class="col-xs-2">
             <button style="width: 160px;" class="btn btn-success">Edit</button>
